einstellung_derive/src/trybuild_tests/invalid_custom_merge_path.stderr
error: Invalid merge function path: expected identifier
 --> src/trybuild_tests/invalid_custom_merge_path.rs
  |
  |     #[config(merge(function = "123 invalid path"))]
  |                               ^^^^^^^^^^^^^^^^^^
